# AccountingDataAnalytics

./: .gitignore  Makefile  README.md  pixi.toml  pyproject.toml
.devcontainer/: devcontainer.json  requirements.txt
.github/workflows/: deploy.yml
code/: 1.0_making_data_funda.ipynb  imports.ipynb  map_maker.ipynb  population_heatmap.html
code/src/: __init__.py  compustat.py  crsp.py
code/utils/: combine_pdfs.py  convert_md.py  extract_course_info.py  pptx.ps1  pptxUG.ps1  tableau_emails.py
labs_hw/: code.css  convert_md.py  default.css
labs_hw/project1/: Project1-FSA.html  Project1-FSA.md  project1_funda_analysis.ipynb
labs_hw/project2/: Project2-FSA-Returns.html  Project2-FSA-Returns.md  data_summary.html
labs_hw/project3/: Project3-Return-regressions.html  Project3-Return-regressions.md  csv_scatter_regression.html
labs_hw/project4/: Project4-SelfGuided.html  Project4-SelfGuided.md
labs_hw/week10_classifiers/: Lab-10_Instructions.html  Lab-10_Instructions.md  Lab-10_MAcc_Instructions.html  Lab-10_MAcc_Instructions.md
labs_hw/week12_AI/: Lab-12_Instructions.html  Lab-12_Instructions.md  Lab-12_MAcc_Instructions.html  Lab-12_MAcc_Instructions.md
labs_hw/week1_opening-data/: Lab-1_Instructions.html  Lab-1_Instructions.md  Lab-1_MAcc_Instructions.md
labs_hw/week2_connecting-to-data/: Homework-2_Instructions.html  Homework-2_Instructions.md  Lab 2 - Opening and Cleaning Data.ipynb  (+4 more)
site/: Makefile  README.md  astro.config.mjs  package-lock.json  package.json  playwright.config.ts  repo-structure.md  tsconfig.json  vitest.config.ts
(+172 files in other folders)
